2010-06-17 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-object-api.h
	(na_object_get_execution_mode,
	na_object_get_startup_notify, na_object_get_startup_class,
	na_object_get_execute_as, na_object_set_execution_mode,
	na_object_set_startup_notify, na_object_set_startup_class,
	na_object_set_execute_as): New macros.

	* src/core/na-object-profile-factory.c:
	Change type of execution mode from uint to string.

	* src/nact/nact-iexecution-tab.c: Implement NactIExecutionTab page.

	* src/nact/nact-ienvironment-tab.c: Implement NactIEnvironmentTab page.

2010-06-16 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-gtk-utils.h
	(nact_gtk_utils_select_file, nact_gtk_utils_select_dir): New functions.

	* src/nact/nact-icommand-tab.c: Updated accordingly.

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c (na_core_utils_slist_setup_element): New function.

	* src/api/na-icontext.h:
	* src/core/na-icontext.c (na_icontext_set_only_desktop,	na_icontext_set_not_desktop):
	New functions.

	* src/api/na-object-api.h (na_object_set_only_desktop, na_object_set_not_desktop):
	New macros.

	* src/nact/nact-ienvironment-tab.c: Implement desktop choice.

	* src/nact/nact-icapabilities-tab.c:
	* src/nact/nautilus-actions-config-tool.ui: Review NactICapabilitiesTab page.

	* src/nact/nact-ischemes-tab.c: Review NactISchemesTab page.

	* src/nact/nact-ifolders-tab.c: Review NactIFoldersTab page.

	* src/nact/nact-ibasenames-tab.c: Review NactIBasenamesTab page.

	* src/nact/nact-match-list.c:
	* src/nact/nact-match-list.h (nact_match_list_on_enable_tab):
	Removed function.

	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-icommand-tab.h: Review NactICommandTab page.

	* src/core/na-object-action-factory.c: Fix comment.

	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-iaction-tab.h: Homogeneïse the code.

2010-06-15 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-main-tab.c:
	* src/nact/nact-main-tab.h (nact_main_tab_get_context):